--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional nav-portfolio</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  
         <header>
+            <h1>Professional portfolio</h1>
             <nav class="navbar-professional">
                 <ul>
                     <li>
@@ -37,13 +39,12 @@
         </div>
 
         <main>
-
-            <section class="container-profile   ">
+            <section class="container-profile">
                 <section class="profile-picture">
                     <img src="./profile-picture/profile_picture.png"  
                     alt="profile picture" id="profile-picture" >
                 </section>
-                <section class="me-about">
+                <section class="me-about" id="about-me">
                     <h2>ABOUT ME</h2>
                     <p> Student of business information system who has worked more than 5 years in companies by utilising
                         the adminitrative and soft skills along with continously updrading the technical skills to delivery the solutions
@@ -53,7 +54,7 @@
               </section>
 
             <section class="container-portfolio">
-                <section class="education-portfolio">
+                <section class="education-portfolio" id="education">
                     <h2> Education </h2>
                     <p>Lorem ipsum dolor, sit amet consectetur a
                         dipisicing elit. Molestias, placeat excepturi! A
@@ -62,15 +63,30 @@
                          , nulla beatae odio repellat earum!</p>
                     </span><br></p>
                 </section>
-                <section class="workexperience-portfolio">
+                <section class="workexperience-portfolio" id="work-experience">
                     <h2> work-experience </h2>
+                    <p>Lorem ipsum dolor sit amet consectetur a
+                        dipisicing elit. Eaque tenetur corporis quam officia, 
+                        amet laborum, magnam nostrum distinctio fugiat vitae eius.
+                         Quisquam similique voluptate ratione sed ab quos sint nobis!</p>
                    
             </section>
-            <section class="Hobbies-portfolio">
+            <section class="Hobbies-portfolio" id="Hobbies">
                 <h2>Hobbies</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                     Sint atque magni quis facilis culpa veniam earum nam ab commodi 
+                     unde eius
+                    , omnis qui doloribus laudantium vitae, fuga perspiciatis at. Quod!</p>
         </section>
+        </section>
+
+        <section class="contact-me">
+            <h2>Contact me</h2>
+            <p> Email address <br>
+                phone number <br>
+            </p>
         </section>
         </main>
 
-
+</body>
 </html>
