adding href to link the heading item to the linkedln website and pdf resume

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="#work-Experience" >Work Experience</a>
                       </li>
                        <li>
-                        <a href="#linkedln"  >Linkedln</a>
+                        <a href="#Linkedln"  >Linkedln</a>
                        </li>
                        <li>
                         <a href="#Contact-me" >Contact Me</a>
@@ -46,7 +46,7 @@
                     alt="profile picture" id="profile-picture" >
                 </section>
                 <section class="me-about" id="about-me">
-                    <h2>ABOUT ME</h2>
+                    <h2><a href="./profile-picture/Resume/Sabin Kumar Thapa_resume.pdf" alt="this is my resume">About me</a></h2>
                     <pre><p> Student of business information system...
                     </p>
                  </pre>
@@ -57,7 +57,7 @@
             <section class="container-portfolio">
             
                 <section class="workexperience-portfolio" id="work-Experience">
-                    <h2> My work-Experience</h2>
+                    <h2> <a href="./profile-picture/Resume/Sabin Kumar Thapa_resume.pdf" alt="this is my resume">work-Experience</a></h2>
                     <p>Lorem ipsum dolor sit amet consectetur a
                         dipisicing elit. Eaque tenetur corporis quam officia, 
                         amet laborum, magnam nostrum distinctio fugiat vitae eius.
@@ -65,7 +65,7 @@
                    
             </section>
             <section class="Linkedln" id="Linkedln">
-                <h2>Linkedln</h2>
+                <h2><a href="https://www.linkedin.com/in/sabin-thapa-42715892/" target="_blank" >my Linkedln </a></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                      Sint atque magni quis facilis culpa veniam earum nam ab commodi 
                      unde eius
