adding some more comments in html and css file

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
             <nav class="navbar">
                 <ul>
                     <li>
+                        <!-- create a link to aboutme when clicked it goes to the section with id about-me -->
                         <a href="#about-me"  id="about-me" alt="linked to the about me section in the page">About Me</a>
                     </li>
                       <li>
                         <a href="#work-experience" id="workexperience" alt="link to the work experience section when clicked">Work-Experience</a>
                       </li>
                        <li>
-                        <!-- open separate windows for linklin profile -->
+                        <!-- create a link of linkelin and open a new windows for it with target  attributes-->
                         <a href="https://www.linkedin.com/feed/" target="_blank" alt="linked to the linkedln profile with clicked">Linkedln</a>
                         <h2 id="logo"></h2>
                        </li>
@@ -93,7 +94,7 @@
                 </div>
                 </section>
                 
-                <!-- Adding the class from library link added in html  -->
+                <!-- Adding the class from library, with webpage for sample linked -->
                 <div class ="contact-info" id="contact-me" >
                     <a href="https://www.facebook.com/" target="_blank" class="fa fa-facebook"></a>
                     <a href="https://www.twitter.com" target="_blank" class="fa fa-twitter"></a>
