added real projects

--- a/index.html
+++ b/index.html
@@ -59,37 +59,37 @@
             <section class="main-portfolio" id="work-experience">
                 <div class="flex-container" id="project1">
                     <!-- linked to my github profile with new window brower when user click inside the description of project box -->
-                            <a href="https://github.com/Sabinkthapa/" target="_blank"   id="proj-1">
-                                 <h3> HTML-CSS-JAVASCRIPT</h3><br>
-                                <span>Simple website</span>
+                            <a href="https://github.com/Sabinkthapa/Weather-App.git" target="_blank"   id="proj-1">
+                                 <h3> Weather-App</h3><br>
+                                <span>Weather-App</span>
                             </a>
                         </div>
 
                         <div class="flex-container" id="project2">
-                            <a href="https://github.com/Sabinkthapa/" target="_blank"   id="proj-2">
-                                <h3>JAVASCRIPT</h3><br>
-                                <span>Interactive webpage-shopping</span>
+                            <a href="https://github.com/Sabinkthapa/WorkForce-Explorer.git " target="_blank"   id="proj-2">
+                                <h3>WorkForce-Explorer</h3><br>
+                                <span>WorkForce-Explorer</span>
                         </a>
                     </div>
 
                     <div class="flex-container" id="project3">
-                            <a href="https://github.com/Sabinkthapa/" target="_blank"   id="proj-3">
-                                <h3> REACTJS</h3><br>
-                                <span>Blog with REACTJS</span>
+                            <a href="https://github.com/Valleyleaf/Catering-Application.git" target="_blank"   id="proj-3">
+                                <h3> 4-Catering application</h3><br>
+                                <span>Catering-Application</span>
                         </a>
                     </div>
 
                     <div class="flex-container" id="project4">    
-                        <a href="https://github.com/Sabinkthapa/" target="_blank"   id="proj-4">
-                            <h3>NODE JS</h3><BR>
-                            <span>How to use NODEJS tutoriol</span>
+                        <a href="https://github.com/Kirill777-web/Snippet-Spark.git" target="_blank"   id="proj-4">
+                            <h3>Snippet-Spark</h3><BR>
+                            <span>Showcase code snippets</span>
                             </a>
                         </div>
 
                         <div class="flex-container" id="project5">  
-                            <a href="https://github.com/Sabinkthapa/" target="_blank"  id="proj-5">
-                                <h3> MERN</h3><br>
-                                <span id="single-page-application">Single page application</span>
+                            <a href="https://github.com/Sabinkthapa/SIMPLY-NOTES.git" target="_blank"  id="proj-5">
+                                <h3> SIMPLY-NOTES</h3><br>
+                                <span id="single-page-application">Notes taking application</span>
                         </a>
                 </div>
                 </section>
