--- a/index.html
+++ b/index.html
@@ -60,36 +60,36 @@
                 <div class="flex-container" id="project1">
                     <!-- linked to my github profile with new window brower when user click inside the description of project box -->
                             <a href="https://github.com/Sabinkthapa/Weather-App.git" target="_blank"   id="proj-1">
-                                 <h3> Weather-App</h3><br>
+                                 <!-- <h3> Weather-App</h3><br> -->
                                 <span>Weather-App</span>
                             </a>
                         </div>
 
                         <div class="flex-container" id="project2">
                             <a href="https://github.com/Sabinkthapa/WorkForce-Explorer.git " target="_blank"   id="proj-2">
-                                <h3>WorkForce-Explorer</h3><br>
+                                <!-- <h3>WorkForce-Explorer</h3><br> -->
                                 <span>WorkForce-Explorer</span>
                         </a>
                     </div>
 
                     <div class="flex-container" id="project3">
                             <a href="https://github.com/Valleyleaf/Catering-Application.git" target="_blank"   id="proj-3">
-                                <h3> 4-Catering application</h3><br>
-                                <span>Catering-Application</span>
+                                <!-- <h3> 4-Catering application</h3><br> -->
+                                <span>4-Catering-Application</span>
                         </a>
                     </div>
 
                     <div class="flex-container" id="project4">    
                         <a href="https://github.com/Kirill777-web/Snippet-Spark.git" target="_blank"   id="proj-4">
-                            <h3>Snippet-Spark</h3><BR>
-                            <span>Showcase code snippets</span>
+                            <!-- <h3>Snippet-Spark</h3><BR> -->
+                            <span>Snippet-Spark</span>
                             </a>
                         </div>
 
                         <div class="flex-container" id="project5">  
                             <a href="https://github.com/Sabinkthapa/SIMPLY-NOTES.git" target="_blank"  id="proj-5">
-                                <h3> SIMPLY-NOTES</h3><br>
-                                <span id="single-page-application">Notes taking application</span>
+                                <!-- <h3> SIMPLY-NOTES</h3><br> -->
+                                <span id="single-page-application">SIMPLY-NOTES</span>
                         </a>
                 </div>
                 </section>
