--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <h2><a href="./profile-picture/Resume/Sabin Kumar Thapa_resume.pdf" alt="this is my resume">About me</a></h2>
             <p> Full stack developer<br><br>
                 Here are some projects 
-                based on react,javascripts,
-                css,mongo,express
+                based on javascript, css,
+                html, node, express
             </p>
       
         </section>
